--- a/ApiCreditSimulator.Api/ApiCreditSimulator.Api.csproj
+++ b/ApiCreditSimulator.Api/ApiCreditSimulator.Api.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ApiCreditSimulator.Access\ApiCreditSimulator.Access.csproj" />
+  </ItemGroup>
 </Project>
