Api Simulation Functional

--- a/ApiCreditSimulator.Shared/ApiCreditSimulator.Shared.csproj
+++ b/ApiCreditSimulator.Shared/ApiCreditSimulator.Shared.csproj
@@ -10,5 +10,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.jso" />
   </ItemGroup>
 </Project>
