--- a/ApiCreditSimulator.Access/ApiCreditSimulator.Access.csproj
+++ b/ApiCreditSimulator.Access/ApiCreditSimulator.Access.csproj
@@ -11,6 +11,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <AdditionalFiles Include="..\stylecop.json" Link="Properties\stylecop.jso" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ApiCreditSimulator.Shared\ApiCreditSimulator.Shared.csproj" />
