--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,8 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Install nuget source
+      run: dotnet nuget add source https://api.nuget.org/v3/index.json
     - name: Install dotnet-format
       run: dotnet tool install -g dotnet-format
     - name: Install dotnet-outdated
