--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dotnet-outdated
       run: dotnet tool install -g dotnet-outdated-tool
     - name: Format
-      run: dotnet format --check
+      run: dotnet format --verify-no-changes
     - name: Outdated
       run: dotnet outdated
     - name: Build
